data/all_generated_tests/raw_wast_tests/br_StackCorruption_222.wast
;; 3. **Test Loop with Mismatched Operand Types:**    - **Description:** Implement a loop with operand types that don't match the expected operands when executed with `br`.    - **Reasoning:** This ensures operand stack management correctly matches expected input types.    - **Constraint:** Adhere to operand stack management rules and ensure matching operand types.    - **Relation to Stack Corruption:** Mismatched operand types cause improper stack restoration, potentially leading to underflows, overflows, or corrupted data on subsequent operations.

(assert_invalid
  (module
    (func $mismatched-operand-types (loop (result i32)
      (i32.const 1)    ;; push i32
      (i64.const 2)    ;; push i64
      (br 0)           ;; branch to the start of the loop, expecting to match i32
    ))
  )
  "type mismatch"
)